deleted unnecessary files

--- a/WebUI/Views/Register/Index.cshtml
+++ b/WebUI/Views/Register/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<main>
+<main style="overflow: auto" class="main-body">
 	<section id="Login">
 		<div class="form-container">
 			<h2 class="mb-4">Register</h2>
