--- a/WebUI/Views/About/Index.cshtml
+++ b/WebUI/Views/About/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<main>
+<main style="overflow: auto" class="main-body">
 	<section id="about">
 		<div class="container">
 			<h1>SoftCinema</h1>
