--- a/WebUI/Views/Contacts/Index.cshtml
+++ b/WebUI/Views/Contacts/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<main>
+<main style="overflow: auto" class="main-body">
     <h1></h1>
     <p>Якщо у вас є запитання або вам потрібна додаткова інформація, будь ласка, зв'яжіться з нами за допомогою наведених нижче контактів.</p>
     <section>
