--- a/WebUI/Views/Home/Index.cshtml
+++ b/WebUI/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<main>
+<main style="overflow: auto" class="main-body">
     <section class="section" style="width: 100%;">
         <div class="container">
             <div class="title-box">
