--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -8,16 +8,13 @@
     <link rel="stylesheet" href="css/style_film.css" media="all" />
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/libs/sanitize.css" />
+    <script src="js/script.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/tailwind.config.js"> </script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/menu_login.js"></script>
-    <link rel="stylesheet" href="css/libs/sanitize.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WebUI</title>
     <link href="https://unpkg.com/tailwindcss@@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body style="overflow: auto">
@@ -32,6 +29,7 @@
         @RenderBody()
         <partial name="Footer" />
     </div>
+    <a href="#" class="back-to-top" style="display: none;"></a>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/script.js"> </script>
 </body>
