--- a/WebUI/Views/Schedule/Index.cshtml
+++ b/WebUI/Views/Schedule/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<<main style="overflow: auto" class="main-body">
+<main style="overflow: auto" class="main-body">
     <h1 class="orange">Розклад</h1>
     <ul>
         <li>Продаж нових автомобілів</li>
