Corrected the styles css and changed the main tabs in the head

--- a/WebUI/Views/Home/Index.cshtml
+++ b/WebUI/Views/Home/Index.cshtml
@@ -1,7 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<main style="overflow: auto" class="main-body">
+<div class="sprite-container">
+    <img src="images/sprite.png" alt="My sprite" class="sprite">
+</div>
+<div>
+    <script src="js/animate.js"> </script>
+</div>
+<main>
     <section class="section" style="width: 100%;">
         <div class="container">
             <div class="title-box">
@@ -106,7 +112,8 @@
                             <div class="movie-hire__tag">сімейний</div>
                         </div>
                     </figcaption>
-                </figure><figure class="movie-hire movies date_13 date_14 date_15" style="position: absolute; left: 25%; top: 619.375px;" aria-hidden="true" tabindex="-1">
+                </figure>
+                <figure class="movie-hire movies date_13 date_14 date_15" style="position: absolute; left: 25%; top: 619.375px;" aria-hidden="true" tabindex="-1">
                     <div class="movie-hire__img-wrap">
                         <img src="https://api.vkino.com.ua/posters/d1/d18b860a7372c090e6a47d9d939dd76002e702f9.jpg" alt="" class="movie-hire__img">
                         <div class="movie-hire__icons">
@@ -123,7 +130,8 @@
                             <div class="movie-hire__tag">комедія</div>
                         </div>
                     </figcaption>
-                </figure><figure class="movie-hire movies date_13 date_14 date_15" style="position: absolute; left: 50%; top: 619.375px;" aria-hidden="true" tabindex="-1">
+                </figure>
+                <figure class="movie-hire movies date_13 date_14 date_15" style="position: absolute; left: 50%; top: 619.375px;" aria-hidden="true" tabindex="-1">
                     <div class="movie-hire__img-wrap">
                         <img src="https://api.vkino.com.ua/posters/3f/3fb3db17d88800d53f798d5c2aed151360a7f844.jpg" alt="" class="movie-hire__img">
                         <div class="movie-hire__icons">
@@ -141,7 +149,8 @@
                             <div class="movie-hire__tag"> екшн</div>
                         </div>
                     </figcaption>
-                </figure><figure class="movie-hire movies date_13 date_14 date_15" style="position: absolute; left: 75%; top: 619.375px;" aria-hidden="true" tabindex="-1">
+                </figure>
+                <figure class="movie-hire movies date_13 date_14 date_15" style="position: absolute; left: 75%; top: 619.375px;" aria-hidden="true" tabindex="-1">
                     <div class="movie-hire__img-wrap">
                         <img src="https://api.vkino.com.ua/posters/d7/d778b8c6a583d8a039c6e18c8f2bac4e940141be.jpg" alt="" class="movie-hire__img">
                         <div class="movie-hire__icons">
@@ -222,7 +231,7 @@
                                     <div class="movie-hire__tag">екшн</div>
                                 </div>
                             </figcaption>
-                            </div>
+                        </div>
                     </figure>
                     <figure class="movie-hire movies date_13 date_14 date_15" style="position: absolute; left: 75%; top: 0px;" aria-hidden="true" tabindex="-1">
                         <div class="movie-hire__img-wrap">
