--- a/WebUI/Views/Shared/Header.cshtml
+++ b/WebUI/Views/Shared/Header.cshtml
@@ -9,23 +9,23 @@
         <ul>
             <li class="current-page_red">
                 <a asp-action="Index"
-                   asp-controller="Home" class="current-page_red">¿‘≤ÿ¿</a>
+                   asp-controller="Home" class="current-page_red">–ê—Ñ—ñ—à–∞</a>
             </li>
             <li class="main-nav_item">
                 <a asp-action="Index"
-                   asp-controller="Schedule" class="main-nav_link" data-category="content">–Œ« À¿ƒ</a>
+                   asp-controller="Schedule" class="main-nav_link" data-category="content">–†–æ–∑–∫–ª–∞–¥</a>
             </li>
             <li class="main-nav_item">
                 <a asp-action="Index"
-                   asp-controller="Contacts" class="main-nav_link"> ŒÕ“¿ “»</a>
+                   asp-controller="Contacts" class="main-nav_link">–ö–æ–Ω—Ç–∞–∫—Ç–∏</a>
             </li>
             <li class="main-nav_item">
                 <a asp-action="Index"
-                   asp-controller="About" class="main-nav_link">œ–Œ  ≤ÕŒ“≈¿“–</a>
+                   asp-controller="About" class="main-nav_link">–ü—Ä–æ –∫—ñ–Ω–æ—Ç–µ–∞—Ç—Ä</a>
             </li>
             <li class="current-page_yellow">
                 <a asp-action="Index"
-                   asp-controller="Login" class="current-page_yellow">”¬≤…“»</a>
+                   asp-controller="Login" class="current-page_yellow">–£–≤—ñ–π—Ç–∏</a>
             </li>
         </ul>
     </nav>
