--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <title>SoftCinema</title>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
-    <link rel="stylesheet" href="css/style_s.css" media="all" />
-    <link rel="stylesheet" href="css/style_film.css" media="all" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/libs/sanitize.css" />
+    <link rel="stylesheet" href="css/style.css" media="all" />
     <script src="js/script.js"></script>
+    <script src="js/animate.js"> </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
@@ -18,12 +16,9 @@
     <link href="https://unpkg.com/tailwindcss@@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body style="overflow: auto">
-    @* <div class="sprite-container"> *@
-    @*     <img src="images/sprite.png" alt="My sprite" class="sprite"> *@
-    @* </div> *@
-    @* <div> *@
-    @*     <script src="js/animate.js"> </script> *@
-    @* </div> *@
+    <div class="sprite-container">
+        <img src="images/sprite.png" alt="My sprite" class="sprite">
+    </div>
     <div class="site-title" style="width: 100svw;">
         <partial name="Header" />
         @RenderBody()
