Created a schedule page and added style css changes

--- a/WebUI/Views/Contacts/Index.cshtml
+++ b/WebUI/Views/Contacts/Index.cshtml
@@ -3,8 +3,7 @@
 }
 <main>
     <container>
-        <h1></h1>
-        <p>Якщо у вас є запитання або вам потрібна додаткова інформація, будь ласка, зв'яжіться з нами за допомогою наведених нижче контактів.</p>
+        <h1>Якщо у вас є запитання або вам потрібна додаткова інформація, будь ласка, зв'яжіться з нами за допомогою наведених нижче контактів.</h1>
         <section>
             <h2>Наші контакти</h2>
             <ul>
@@ -18,13 +17,13 @@
                 </li>
                 <li>
                     <h3>Email:</h3>
-                    <p>info@autoscout.com</p>
+                    <p>info@sofrcinema.com</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Ми в соціальних мережах</h2>
             <div class="menu-block">
+                <h2>Ми в соціальних мережах</h2>
                 <div class="menu_soc">
                     <a class="menu_soc_item" href="" rel="nofollow" target="_blank">
                         <img src="UI/icons8-facebook.svg" alt="Facebook">
