--- a/WebUI/Views/Schedule/Index.cshtml
+++ b/WebUI/Views/Schedule/Index.cshtml
@@ -2,12 +2,151 @@
     ViewData["Title"] = "Home Page";
 }
 <main style="overflow: auto" class="main-body">
-    <h1 class="orange">Розклад</h1>
-    <ul>
-        <li>Продаж нових автомобілів</li>
-        <li>Продаж вживаних автомобілів</li>
-        <li>Кредитування</li>
-        <li>Трейд-ін</li>
-        <li>Сервісне обслуговування</li>
-    </ul>
+    <section class="section section_03">
+        <div class="container">
+            <div class="title-box">
+                <div class="title-box__title">Розклад сеансів</div>
+                
+            </div>
+            <table cellspacing="0" cellpadding="0" class="schedule-table" style="position: relative; height: 2582.94px;">
+                <tbody><tr class="schedule-table__row schedule-table__row_head category_14" style="position: static; left: 0px; top: 0px;">
+                    <td class="schedule-table__col">&nbsp;Вт,  14.05</td>
+                    <td class="schedule-table__col">Назва фільму</td>
+                    <td class="schedule-table__col">Зал</td>
+                    <td class="schedule-table__col">Формат</td>
+                    <td class="schedule-table__col">Купити</td>
+                </tr>
+
+                <tr class="schedule-table__row category_14" style="position: static; left: 0px; top: 61px;">
+                    <td class="schedule-table__col">10:10</td>
+                    <td class="schedule-table__col">
+                        <a href="">
+                            <div class="schedule-table__col_name" style="height:100%;width:100%">
+                                10 життя                                        </div>
+                        </a>
+                    </td>
+                    <td class="schedule-table__col">4</td>
+                    <td class="schedule-table__col schedule-table__col_format">2D</td>
+                    <td class="schedule-table__col">
+                        <a href="" class="schedule-hall vkino­link" id="90391" target="_top">
+                            <button type="button" id="90391" class="schedule-table__btn">Купити</button>
+                        </a>
+                    </td>
+                </tr>
+                <tr class="schedule-table__row category_14" style="position: static; left: 0px; top: 119.594px;">
+                    <td class="schedule-table__col">10:15</td>
+                    <td class="schedule-table__col">
+                        <a href="">
+                            <div class="schedule-table__col_name" style="height:100%;width:100%">
+                                Каскадер                                        </div>
+                        </a>
+                    </td>
+                    <td class="schedule-table__col">1</td>
+                    <td class="schedule-table__col schedule-table__col_format">2D</td>
+                    <td class="schedule-table__col">
+                        <a href="https://bilet.vkino.com.ua/showtime/?theater=premiercity&amp;showtime=90286&amp;agent=premiercity&amp;lang=uk" class="schedule-hall vkino­link" id="90286" target="_top">
+                            <button type="button" id="90286" class="schedule-table__btn">Купити</button>
+                        </a>
+                    </td>
+                </tr>
+                <tr class="schedule-table__row category_14" style="position: static; left: 0px; top: 178.188px;">
+                    <td class="schedule-table__col">10:40</td>
+                    <td class="schedule-table__col">
+                        <a href="https://premiercity.com.ua/korolivstvo-planeti-mavp-10371">
+                            <div class="schedule-table__col_name" style="height:100%;width:100%">
+                                Королівство планети мавп                                        </div>
+                        </a>
+                    </td>
+                    <td class="schedule-table__col">2</td>
+                    <td class="schedule-table__col schedule-table__col_format">2D</td>
+                    <td class="schedule-table__col">
+                        <a href="https://bilet.vkino.com.ua/showtime/?theater=premiercity&amp;showtime=90321&amp;agent=premiercity&amp;lang=uk" class="schedule-hall vkino­link" id="90321" target="_top">
+                            <button type="button" id="90321" class="schedule-table__btn">Купити</button>
+                        </a>
+                    </td>
+                </tr>
+                <tr class="schedule-table__row category_14" style="position: static; left: 0px; top: 236.781px;">
+                    <td class="schedule-table__col">11:00</td>
+                    <td class="schedule-table__col">
+                        <a href="https://premiercity.com.ua/krashanka-10404">
+                            <div class="schedule-table__col_name" style="height:100%;width:100%">
+                                Крашанка                                        </div>
+                        </a>
+                    </td>
+                    <td class="schedule-table__col">3</td>
+                    <td class="schedule-table__col schedule-table__col_format">2D</td>
+                    <td class="schedule-table__col">
+                        <a href="https://bilet.vkino.com.ua/showtime/?theater=premiercity&amp;showtime=90356&amp;agent=premiercity&amp;lang=uk" class="schedule-hall vkino­link" id="90356" target="_top">
+                            <button type="button" id="90356" class="schedule-table__btn">Купити</button>
+                        </a>
+                    </td>
+                </tr>
+                <tr class="schedule-table__row category_14" style="position: static; left: 0px; top: 295.375px;">
+                    <td class="schedule-table__col">12:00</td>
+                    <td class="schedule-table__col">
+                        <a href="https://premiercity.com.ua/10-zhittiv-10-lives-10420">
+                            <div class="schedule-table__col_name" style="height:100%;width:100%">
+                                Уявні друзі                                        </div>
+                        </a>
+                    </td>
+                    <td class="schedule-table__col">4</td>
+                    <td class="schedule-table__col schedule-table__col_format">2D</td>
+                    <td class="schedule-table__col">
+                        <a href="https://bilet.vkino.com.ua/showtime/?theater=premiercity&amp;showtime=90398&amp;agent=premiercity&amp;lang=uk" class="schedule-hall vkino­link" id="90398" target="_top">
+                            <button type="button" id="90398" class="schedule-table__btn">Купити</button>
+                        </a>
+                    </td>
+                </tr>
+                <tr class="schedule-table__row category_14" style="position: static; left: 0px; top: 353.969px;">
+                    <td class="schedule-table__col">12:35</td>
+                    <td class="schedule-table__col">
+                        <a href="https://premiercity.com.ua/korolivstvo-planeti-mavp-10371">
+                            <div class="schedule-table__col_name" style="height:100%;width:100%">
+                                Таро                                        </div>
+                        </a>
+                    </td>
+                    <td class="schedule-table__col">1</td>
+                    <td class="schedule-table__col schedule-table__col_format">2D</td>
+                    <td class="schedule-table__col">
+                        <a href="https://bilet.vkino.com.ua/showtime/?theater=premiercity&amp;showtime=90293&amp;agent=premiercity&amp;lang=uk" class="schedule-hall vkino­link" id="90293" target="_top">
+                            <button type="button" id="90293" class="schedule-table__btn">Купити</button>
+                        </a>
+                    </td>
+                </tr>
+                <tr class="schedule-table__row category_14" style="position: static; left: 0px; top: 412.563px;">
+                    <td class="schedule-table__col">13:00</td>
+                    <td class="schedule-table__col">
+                        <a href="https://premiercity.com.ua/krashanka-10404">
+                            <div class="schedule-table__col_name" style="height:100%;width:100%">
+                                Суперники                                        </div>
+                        </a>
+                    </td>
+                    <td class="schedule-table__col">3</td>
+                    <td class="schedule-table__col schedule-table__col_format">2D</td>
+                    <td class="schedule-table__col">
+                        <a href="https://bilet.vkino.com.ua/showtime/?theater=premiercity&amp;showtime=90363&amp;agent=premiercity&amp;lang=uk" class="schedule-hall vkino­link" id="90363" target="_top">
+                            <button type="button" id="90363" class="schedule-table__btn">Купити</button>
+                        </a>
+                    </td>
+                </tr>
+                <tr class="schedule-table__row category_14" style="position: static; left: 0px; top: 471.157px;">
+                    <td class="schedule-table__col">13:20</td>
+                    <td class="schedule-table__col">
+                        <a href="https://premiercity.com.ua/budinok-slovo-neskinchennii-roman-10415">
+                            <div class="schedule-table__col_name" style="height:100%;width:100%">
+                                Будинок «Слово». Нескінчений роман                                        </div>
+                        </a>
+                    </td>
+                    <td class="schedule-table__col">2</td>
+                    <td class="schedule-table__col schedule-table__col_format">2D</td>
+                    <td class="schedule-table__col">
+                        <a href="https://bilet.vkino.com.ua/showtime/?theater=premiercity&amp;showtime=90328&amp;agent=premiercity&amp;lang=uk" class="schedule-hall vkino­link" id="90328" target="_top">
+                            <button type="button" id="90328" class="schedule-table__btn">Купити</button>
+                        </a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </section>
+   
 </main>
