added film page

--- a/WebUI/Views/Home/Index.cshtml
+++ b/WebUI/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<Core.Models.Movie.Movie>
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model List<Core.Models.Movie.Movie>
 
 @{
     ViewData["Title"] = "Home Page";
@@ -18,3 +19,29 @@
         </div>
     </section>
 </main>
+
+@{
+    <script>
+        if (localStorage.getItem('animated') !== "true")
+        {
+            localStorage.setItem('animated', "true")
+            window.onload = function() {
+                var logo = document.querySelector('.sprite');
+                var siteTitle = document.querySelector('.site-title');
+                logo.style.display = "block";
+                logo.style.opacity = 0;
+                siteTitle.style.opacity = 0;
+                var animation = logo.animate([{opacity: 0}, {opacity: 1}], 1500);
+                animation.onfinish = function() {
+                    siteTitle.animate([{opacity: 0}, {opacity: 1}], 1000);
+
+                    setTimeout(function() {
+                        siteTitle.style.opacity = 1;
+                        main.style.display = 'block';
+                        document.body.style.overflow = 'auto';
+                    }, 1000);
+                }
+            }
+        }
+    </script>
+}
