--- a/WebUI/Views/Shared/MovieCard.cshtml
+++ b/WebUI/Views/Shared/MovieCard.cshtml
@@ -4,18 +4,18 @@
     <div class="movie-hire__img-wrap">
         <img src="@Model.ImageUrl" alt="" class="movie-hire__img">
         <div class="movie-hire__icons">
-            <a href="https://premiercity.com.ua/uyavni-druzi-if-10357" class="movie-hire__icon movie-hire__icon_ticket" tabindex="-1"></a>
+            <a asp-controller="Film" asp-action="Index" asp-route-id="@Model.Id" class="movie-hire__icon movie-hire__icon_ticket" tabindex="-1"></a>
             <a href="#" class="movie-hire__icon movie-hire__icon_play" data-youtube-id="Zw0V4UlRc2g" data-movie-name="@Model.Name" tabindex="-1"></a>
         </div>
     </div>
     <figcaption>
         <div class="movie-hire__title">
-            <a href="https://premiercity.com.ua/uyavni-druzi-if-10357" tabindex="-1"> @Model.Name </a>
+            <a asp-controller="Film" asp-action="Index" asp-route-id="@Model.Id" tabindex="-1"> @Model.Name </a>
             <span class="movie-hire__badge"></span>
         </div>
         <div class="movie-hire__tags">
             <div class="movie-hire__tag">@Model.AgeRestriction+</div>
-            @foreach (var g in @Model.Genres)
+            @foreach (var g in Model.Genres!)
             {
                 <div class="movie-hire__tag">@g.Name</div>
             }
