--- a/WebUI/Views/Login/Index.cshtml
+++ b/WebUI/Views/Login/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 <main style="overflow: auto" class="main-body">
-	<secti on id="Login">
+	<section id="Login">
 		<div class="form-container">
 			<h2 class="mb-4">Login</h2>
 			<form id="loginForm" class="bootstrap-form">
@@ -21,6 +21,5 @@
 
 			<hr class="my-4">
 		</div>
-	</secti>
-
+	</section>
 </main>
