--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 <div class="sprite-container">
     <img src="~/images/sprite.png" alt="My sprite" class="sprite">
 </div>
-<div class="site-title" style="width: 100svw;">
+<div class="site-title">
     <partial name="Header"/>
     @RenderBody()
     <partial name="Footer"/>
